# Rust-Note

./: README.md  hello_world.7z
calendar/: Cargo.toml
calendar/src/: main.rs
cmdctl/: Cargo.toml
cmdctl/src/: main.rs
command_line/src/: main.rs
design_patterns/constructs/src/: main.rs
design_patterns/string_borrow_format/: Cargo.toml
design_patterns/string_borrow_format/src/: main.rs
diary/src/: main.rs
egui/hello_world/: Cargo.toml
egui/hello_world/src/: main.rs
elliptic_curve/src/: main.rs
fbnq/: Cargo.toml
fbnq/src/: main.rs
guessing_game/src/: main.rs
hello-ratatui/src/: main.rs
hello-rust/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
rock_paper_scissors/: Cargo.toml
rock_paper_scissors/src/: main.rs
serde_try/: Cargo.toml
serde_try/src/: main.rs
temperature_convert/src/: main.rs
tic_tac_toe/src/: main.rs
trojan-c/: Cargo.toml
trojan-c/src/: main.rs
trojan-s/: Cargo.toml
trojan-s/src/: command.rs  main.rs  socket_server.rs
vexide_config/: Dockerfile
