[package]
name = "hello_world"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"
publish = false


[dependencies]
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders", "image"] }
env_logger = "0.11.5"
image = { version = "0.25", features = ["png", "jpeg"] }
